Using more efficient `Integer.valueOf(int)`.